Fix floating images on mobile view.
The images in a simplelayout block should not float if they are full width.

--- a/ftw/simplelayout/browser/resources/integration.theme.scss
+++ b/ftw/simplelayout/browser/resources/integration.theme.scss
@@ -11,10 +11,14 @@
   width: 100%;
 
   &.left {
-    float: left;
+    @include screen-small() {
+      float: left;
+    }
   }
   &.right {
-    float: right;
+    @include screen-small() {
+      float: right;
+    }
   }
   &.sl_textblock_small{
     @include screen-small() {
